--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "xlsx": "^0.16.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,7 +43,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
-    "eslint": "^7.6.0",
+    "eslint": "^6.6.0",
     "eslint-plugin-react": "^7.20.5",
     "node-sass": "^4.14.1",
     "typescript": "^3.9.7"
