--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
     "eslint-plugin-react": "^7.20.5",
     "node-sass": "^4.14.1",
     "typescript": "^3.9.7"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
