--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build & rm -rf ../react-ts-be/client/* & co -a build/* ../react-ts-be/client",
+    "build": "react-scripts build",
+    "publish": "rm -rf ../react-ts-be/client/* & cp -a build/* ../react-ts-be/client",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
