Move backend code to another project

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
+# Port
+PORT=5000
+
+# Music App
 REACT_APP_MUSIXMATCH_KEY=f29f70e7a6d9a1b824e2b824ba44a7fb
+
+# MongoDB Atlas
+MONGO_ATLAS_URI=mongodb+srv://root:Mongo123456@cluster0-26eac.mongodb.net/bookmarks?retryWrites=true&w=majority
