--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/react": "^10.4.7",
     "@testing-library/user-event": "^12.1.0",
     "axios": "^0.19.2",
-    "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
@@ -17,7 +16,9 @@
     "xlsx": "^0.16.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run start:fe",
+    "start:fe": "react-scripts start",
+    "start:be": "nodemon server/index.ts --exec 'ts-node server/index.ts'",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,7 +39,6 @@
     ]
   },
   "devDependencies": {
-    "@types/express": "^4.17.7",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
